syntax = "proto3";
import "google/protobuf/struct.proto";

package docarray;

message DocListProto { repeated DocProto docs = 1; }

message DocProto { map<string, NodeProto> data = 1; }

message DenseNdArrayProto {
  // the actual array data, in bytes
  bytes buffer = 1;

  // the shape (dimensions) of the array
  repeated uint32 shape = 2;

  // the data type of the array
  string dtype = 3;
}

message NdArrayProto {
  DenseNdArrayProto dense = 1; // dense representation of the ndarray

  google.protobuf.Struct parameters = 2;
}

message NodeProto {

  oneof content {
    // a text
    string text = 1;
    // an integer
    int32 integer = 2;
    // a float
    double float = 3;
    // a boolean
    bool boolean = 4;
    // a bytes representation
    bytes blob = 5;
    // the ndarray of the image/audio/video document
    NdArrayProto ndarray = 6;
    // a sub Document
    DocProto doc = 7;
    // a sub DocArray
    DocListProto doc_array = 8;
  }

  oneof docarray_type { string type = 13; }
}
